--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
-Package: fishr.example
-Title: What the Package Does (One Line, Title Case)
+Package: fishr
+Title: Calculate standard catch metrics for fisheries
 Version: 0.0.0.9000
 Authors@R: 
     person("Andy", "Teucher", , "andy.teucher@gmail.com", role = c("aut", "cre"),
            comment = c(ORCID = "0000-0002-7840-692X"))
-Description: What the package does (one paragraph).
+Description: Provides functions for calculating and analyzing fisheries
+    catch data, such as Catch Per Unit Effort (CPUE), a fundamental metric in
+    fisheries science.
 License: MIT + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
