--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,3 +13,6 @@ Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.3.3
 URL: https://github.com/ateucher/fishr.example
 BugReports: https://github.com/ateucher/fishr.example/issues
+Suggests: 
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
