--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,3 +16,5 @@ BugReports: https://github.com/ateucher/fishr.example/issues
 Suggests: 
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
+Imports: 
+    rlang
