--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,7 +14,8 @@ RoxygenNote: 7.3.3
 URL: https://github.com/ateucher/fishr.example
 BugReports: https://github.com/ateucher/fishr.example/issues
 Suggests: 
-    testthat (>= 3.0.0)
+    testthat (>= 3.0.0),
+    withr
 Config/testthat/edition: 3
 Imports: 
     rlang
