--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,6 +14,7 @@ RoxygenNote: 7.3.3
 URL: https://github.com/ateucher/fishr.example
 BugReports: https://github.com/ateucher/fishr.example/issues
 Suggests: 
+    covr,
     testthat (>= 3.0.0),
     withr
 Config/testthat/edition: 3
